# opengl-cpp

./: CMakeLists.txt  CMakePresets.json  compile_commands.json  main.cpp  vcpkg.json
.cache/clangd/index/: main.cpp.62182BC712491CAC.idx
